--- a/css/globalstyle.css
+++ b/css/globalstyle.css
@@ -6,7 +6,7 @@ body,
 html {
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: black;
+  background-color: purple;
 }
 
 input,
