--- a/css/variables.css
+++ b/css/variables.css
@@ -6,6 +6,9 @@
   --main-color-grey: grey;
   --main-color-orange: orange;
   --main-color-yellow: yellow;
+  --main-color-purple: purple;
+  --main-color-pink: pink;
+  --main-color-green: green;
   --twenty-px: 20px;
   --ten-px: 10px;
 }
